force-app/main/default/objects/SL_App_Configuration__c/SL_App_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>SL App Configuration</label>
</CustomObject>