force-app/main/default/objects/SL_App_Configuration__c/fields/Org_Password__c.field-meta.xml
<CustomField>
    <fullName>Org_Password__c</fullName>
    <label>Org Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>