force-app/main/default/objects/SL_App_Configuration__c/fields/Org_Security_Token__c.field-meta.xml
<CustomField>
    <fullName>Org_Security_Token__c</fullName>
    <label>Org Security Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>