force-app/main/default/objects/SL_App_Configuration__c/fields/Org_Url__c.field-meta.xml
<CustomField>
    <fullName>Org_Url__c</fullName>
    <label>Org_Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>