force-app/main/default/objects/SL_App_Configuration__c/fields/Org_Username__c.field-meta.xml
<CustomField>
    <fullName>Org_Username__c</fullName>
    <label>Org Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>